Continue the path of daggerization of the console client